# LLM-understand-graph

./: .env.example  .gitignore  .gitmodules  IMPLEMENTATION.md  README.md  TASKS.md  list_models.py  pyproject.toml  reproduce_error.py  reproduce_openrouter.py  reproduce_validation.py  test_algorithms_quick.py  test_uv_setup.py
code/: .env.README.md  .env.example  BENCHMARK_FIXES.md  DEVELOPMENT.md  INTERACTIVE_README.md  QUICK_START.md  README.md  TEST_SUITE_README.md  VALIDATION_FIXES_NEEDED.md  fix_emojis.py  interactive_pipeline.py  pytest.ini  requirements.txt  run_comprehensive_benchmark.py  run_multi_model_benchmark.py  run_nlgraph_benchmark.py  simple_interactive.py  test_all_algorithms.py  test_openrouter.py
code/configs/: default.yaml
code/docs/: INSTALLATION.md  NLGRAPH_ADAPTER.md  NLGRAPH_BENCHMARK.md  NLGRAPH_LOADER.md  OPENROUTER_GUIDE.md
code/examples/: FREE_MODELS_README.md  advanced_usage.py  basic_usage.py  check_api_key.py  nlgraph_adapter_example.py  test_benchmark_modules.py  test_free_models.py  test_nlgraph_loader.py  test_openrouter.py
code/experiments/: run_ablation.py  run_benchmark.py
code/src/: __init__.py  pipeline.py
code/src/agents/: __init__.py  chooser.py  nlgraph_adapter.py  orchestrator.py  parser.py  prompts.py  synthesizer.py  verifier.py
code/src/algorithms/: __init__.py  connectivity.py  cycles.py  executor.py  flow.py  matching.py  shortest_path.py
code/src/benchmarks/: __init__.py  evaluator.py  graph_instruct.py  nlgraph.py
code/src/llms/: base.py  openrouter_client.py
code/src/models/: __init__.py  base.py  graph_format.py  model_configs.py  ollama_client.py  openai_client.py  openrouter_client.py
code/src/orchestrator/: __init__.py  decomposer.py  orchestrator.py  pipeline.py  validator.py
code/src/utils/: __init__.py  config_loader.py  graph_utils.py  logging_utils.py
code/tests/: test_chooser.py  test_integration.py  test_nlgraph_integration.py  test_nlgraph_parsing.py  test_parser.py
llm-graph/: DEVELOPMENT.md  README.md  TASKS.md  pytest.ini  requirements.txt
llm-graph/configs/: default.yaml
llm-graph/examples/: basic_usage.py
llm-graph/experiments/: run_ablation.py  run_benchmark.py
llm-graph/project-latex/: AAMAS_2025_sample.tex
llm-graph/src/: __init__.py
llm-graph/src/agents/: __init__.py  chooser.py  parser.py  prompts.py  verifier.py
llm-graph/src/algorithms/: __init__.py  connectivity.py  cycles.py  executor.py  flow.py  matching.py  shortest_path.py
llm-graph/src/benchmarks/: __init__.py  evaluator.py  graph_instruct.py  nlgraph.py
llm-graph/src/models/: __init__.py  base.py  ollama_client.py  openai_client.py
llm-graph/src/orchestrator/: __init__.py  pipeline.py
llm-graph/src/utils/: __init__.py  config_loader.py  graph_utils.py  logging_utils.py
llm-graph/tests/: test_chooser.py  test_integration.py  test_parser.py
